two version of  stackBlur + grunt building script

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -5,7 +5,7 @@
   
 	<script type='text/javascript' src='http://code.jquery.com/jquery-1.7.1.js'></script>
 	<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js'></script>
-	<script type='text/javascript' src='jquery.blur.js'></script>
+	<script type='text/javascript' src='../dist/jquery.blur.js'></script>
   
 	<style type='text/css'>
 		body{
